# create_boo

create_boo_yolov5/: CMakeLists.txt  README.md  package.xml
create_boo_yolov5/src/: __init__.py  main.py
yolo_ros/: README.md
yolo_ros/yolo_ros_msgs/: CMakeLists.txt  package.xml
yolo_ros/yolo_ros_msgs/action/: AllDetectionData.action
yolo_ros/yolov5_ros/configs/: yolov5m_Objects365.yaml
yolo_ros/yolov5_ros/launch/: yolov5_ros.launch
yolo_ros/yolov5_ros/scripts/: yolov5_multi_model_object_detection_node.py  yolov5_object_detector_node.py
