<?xml version="1.0"?>
<package format="2">
  <name>create_boo_yolov5</name>
  <version>1.0.0</version>
  <description>The create_boo_yolov5 package</description>
  <maintainer email="hasegawa.shoichi@em.ci.ritsumei.ac.jp">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>

